Remove external authentication from project scope
